<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">How do I live tutorial</string>
    <string name="action_settings">Settings</string>
    <string name="language_en">English</string>
    <string name="language_zh_TW">繁體中文</string>
    <string name="language_zh_CN">简体中文</string>
    <string name="description_main">Let\'s plan your life!</string>
    <string name="start">Start!</string>
    <string name="et_tutorial">ET tutorial</string>
    <string name="restart">Menu</string>
    <string name="title_activity_introduction">ET Introduction</string>
    <string name="description1_introduction">Invention is the process of evolution, not a huge leap.</string>
    <string name="description2_introduction">Equivalance transformation is a invention method, which imitate and compares with other objects.</string>
    <string name="description3_introduction">Equivalance transformation is like analogic Invention, which imitate existent objects to invent new things.</string>
    <string name="next">Next</string>
    <string name="title_activity_step1">Step1. Adjust your life parameter</string>
    <string name="description1_step1">To plan your life, first you have to adjust your current states. These states include:</string>
    <string name="description2_step1">1. Life represents your health.\n2. Money represents your wealth.\n3. Age represents how many years you can live</string>
    <string name="title_activity_step2">Step2. Choose your next step</string>
    <string name="description1_step2">Now, start planning your life!\nYou have just graduated from university, and it is time to make your decision which you are going to do next.\nYou have 4 choices:</string>
    <string name="description2_step2">1. Master\'s degree\n2. Find a job\n3. Do nothing\n4. Work for military</string>
    <string name="show_hints">Show hints</string>
    <string name="title_activity_show_hints">ShowHints</string>

    <string-array name="hints">
        <item>Master\'s degree</item>
        <item>Find a job</item>
        <item>Do nothing</item>
        <item>Work for military</item>
        <item>Back</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="title_item_list">@string/et_tutorial</string>
    <string name="a0bt">Aο and Bτ</string>
    <string name="common_parts">Common parts</string>
    <string name="sasb">Addition and subtraction</string>
    <string name="vi">Vi</string>
    <string name="description_a0bt">Aο is origianl states, and Bτ is final states.</string>
    <string name="description_common_parts">Common parts are those components which are common between Aο and Bτ</string>
    <string name="description_sasb">Σa are those components which are removed from Aο. Σb are those components which are added to Bτ</string>
    <string name="description_vi">Vi is the perspective to invent or improve Aο</string>
    <string name="ex_a0bt">Ex. Revolving restaurant → Parking tower\nAο: Revolving restaurant\nBτ: Parking tower</string>
    <string name="ex_common_parts">Ex. Revolving restaurant → Parking tower\ncε: tower structure, lift system</string>
    <string name="ex_sasb">Ex. Revolving restaurant → Parking tower\nΣa: restaurants, ceilling windows\nΣb: parking lot, driving routes</string>
    <string name="ex_vi">Ex. Revolving restaurant → Parking tower\nVi: increase parking capacity</string>
    <string name="title_item_detail"></string>

</resources>
